# Team_4_backend

./: .env.dist  .gitignore  README.md  pyproject.toml  requirements.txt
apps/account/: admin.py  managers.py  mixins.py  models.py  serializers.py  tasks.py  urls.py  views.py
apps/account/services/: constants.py  translit.py  upload_to_file.py  validations.py
apps/account/templates/account/: code_mail.html
apps/account/tests/: test_api_users.py  test_auth_api.py  test_serializers.py
apps/doctor/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/reception/: admin.py  apps.py  mixins.py  models.py  serializers.py  urls.py  views.py
apps/reception/services/: logics.py
settings/: celery.py  settings.py  urls.py  yasg.py
settings/config/: celery.conf  gunicorn.conf.py  med-service.conf
