[tool.poetry]
name = "team-4-backend"
version = "0.1.0"
description = "Система бронирования медицинских услуг"
authors = ["wayupkg <adikgk232323@gmail.com>"]
readme = "README.md"
packages = [{include = "team_4_backend"}]

[tool.poetry.dependencies]
python = "^3.8"
django = "3.2"
djangorestframework = "^3.14.0"
drf-yasg = "^1.21.4"
environs = "^9.5.0"
pillow = "^9.3.0"
psycopg2-binary = "^2.9.5"
redis = "^4.4.0"
celery = "^5.2.7"
coverage = "^6.5.0"
six = "^1.16.0"
djoser = "^2.1.0"
ruamel-yaml-clib = "^0.2.7"
transliterate = "^1.10.2"
django-cleanup = "^6.0.0"
django-imagekit = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
